fixed line spacing in displayTxt used line-height in css id .displayTxt

--- a/calculator.css
+++ b/calculator.css
@@ -19,19 +19,21 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 50vw;
-    height: 15vw;
+    width: 60vw;
+    height: 25vw;
     border: 2px solid black;
     background-color: rgb(98, 133, 238);
 }
 
 #displayTxt {
-    width: 45vw;
-    height: 13vw;
-    text-align: center;
-    vertical-align: center;
-    font-size: clamp(3rem, 2vw, 10rem);
+    width: 50vw;
+    height: 20vw;
+    text-align: left;
+    font-size: 4vw;
+    line-height: 5vw;
     font-family: 'digital7';
+    white-space: pre-wrap;
+    margin: 1rem;
     
 }
 
